[package]
name = "kullat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24.1"
stardust-xr-fusion = "0.43.2"
tokio = { version = "1.29.1", features = ["rt"] }
tracing = { version = "0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = "0.3.17"
color-eyre = { version = "0.6.2", default-features = false }
wayland-egl = { version = "0.30.0"}

[dependencies.smithay]
git = "https://github.com/smithay/smithay.git"

default-features = false
features = [
    "backend_vulkan",
    "backend_winit",
    "renderer_gl",
]
version = "*"

[patch.crates-io]
stardust-xr-fusion = { path = "../core/fusion" }
