[package]
name = "kullat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24.1"
tokio = { version = "1.29.1", features = ["rt"] }
tracing = { version = "0.1.37", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
tracing-subscriber = "0.3.17"
color-eyre = { version = "0.6.2", default-features = false }
winit = "0.28.7"
wayland-egl = { version = "0.32.0" }
color-rs = "0.8.0"
mint = "0.5.9"

[dependencies.smithay]
git = "https://github.com/smithay/smithay.git"
default-features = false
features = ["backend_vulkan", "backend_winit", "renderer_gl"]
version = "*"

[dependencies.stardust-xr-fusion]
git = "https://github.com/StardustXR/core.git"
branch = "camera-item"
